gdscript/src/main/gen/gdscript/parser/GdParser.java
// This is a generated file. Not intended for manual editing.
package gdscript.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static gdscript.psi.GdTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GdParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return gdfile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ANNOTATION_TL, CLASS_DECL_TL, CLASS_VAR_DECL_TL, CONST_DECL_TL,
      ENUM_DECL_TL, METHOD_DECL_TL, SIGNAL_DECL_TL, TOP_LEVEL_DECL),
    create_token_set_(ASSIGN_ST, AWAIT_ST, CONST_DECL_ST, ELIF_ST,
      ELSE_ST, EXPR_ST, FLOW_ST, FOR_ST,
      IF_ST, MATCH_ST, STMT, VAR_DECL_ST,
      WHILE_ST),
    create_token_set_(ARR_EX, ATTRIBUTE_EX, BIT_AND_EX, BIT_NOT_EX,
      CALL_EX, CAST_EX, COMPARISON_EX, EXPR,
      FACTOR_EX, FUNC_DECL_EX, IN_EX, IS_EX,
      LITERAL_EX, LOGIC_EX, NEGATE_EX, PLUS_EX,
      PLUS_MINUS_EX, PLUS_MINUS_PRE_EX, PRIMARY_EX, SHIFT_EX,
      SIGN_EX, TERNARY_EX),
  };

  /* ********************************************************** */
  // literal_ex (COMMA literal_ex)*
  public static boolean annotationParams(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationParams")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_PARAMS, "<annotation params>");
    r = literal_ex(b, l + 1);
    r = r && annotationParams_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA literal_ex)*
  private static boolean annotationParams_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationParams_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotationParams_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotationParams_1", c)) break;
    }
    return true;
  }

  // COMMA literal_ex
  private static boolean annotationParams_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationParams_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && literal_ex(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ANNOTATOR (LRBR annotationParams? RRBR)? endStmt?
  public static boolean annotation_tl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_tl")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_TL, "<annotation tl>");
    r = consumeTokenFast(b, ANNOTATOR);
    p = r; // pin = 1
    r = r && report_error_(b, annotation_tl_1(b, l + 1));
    r = p && annotation_tl_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, GdParser::topLevelDecl_r);
    return r || p;
  }

  // (LRBR annotationParams? RRBR)?
  private static boolean annotation_tl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_tl_1")) return false;
    annotation_tl_1_0(b, l + 1);
    return true;
  }

  // LRBR annotationParams? RRBR
  private static boolean annotation_tl_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_tl_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, LRBR);
    r = r && annotation_tl_1_0_1(b, l + 1);
    r = r && consumeToken(b, RRBR);
    exit_section_(b, m, null, r);
    return r;
  }

  // annotationParams?
  private static boolean annotation_tl_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_tl_1_0_1")) return false;
    annotationParams(b, l + 1);
    return true;
  }

  // endStmt?
  private static boolean annotation_tl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_tl_2")) return false;
    endStmt(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // expr (COMMA expr)* COMMA?
  public static boolean argList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARG_LIST, "<arg list>");
    r = expr(b, l + 1, -1);
    p = r; // pin = 1
    r = r && report_error_(b, argList_1(b, l + 1));
    r = p && argList_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, GdParser::argList_r);
    return r || p;
  }

  // (COMMA expr)*
  private static boolean argList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argList_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean argList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean argList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // !(RRBR | endStmt)
  static boolean argList_r(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_r")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !argList_r_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // RRBR | endStmt
  private static boolean argList_r_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_r_0")) return false;
    boolean r;
    r = consumeToken(b, RRBR);
    if (!r) r = endStmt(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // LSBR (expr (COMMA expr)* COMMA?)? RSBR
  public static boolean arrayDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayDecl")) return false;
    if (!nextTokenIs(b, LSBR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LSBR);
    r = r && arrayDecl_1(b, l + 1);
    r = r && consumeToken(b, RSBR);
    exit_section_(b, m, ARRAY_DECL, r);
    return r;
  }

  // (expr (COMMA expr)* COMMA?)?
  private static boolean arrayDecl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayDecl_1")) return false;
    arrayDecl_1_0(b, l + 1);
    return true;
  }

  // expr (COMMA expr)* COMMA?
  private static boolean arrayDecl_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayDecl_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1, -1);
    r = r && arrayDecl_1_0_1(b, l + 1);
    r = r && arrayDecl_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expr)*
  private static boolean arrayDecl_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayDecl_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arrayDecl_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayDecl_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean arrayDecl_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayDecl_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean arrayDecl_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayDecl_1_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // LSBR ( pattern (COMMA pattern)* (COMMA DOTDOT)? )? RSBR
  public static boolean arrayPattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern")) return false;
    if (!nextTokenIs(b, LSBR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LSBR);
    r = r && arrayPattern_1(b, l + 1);
    r = r && consumeToken(b, RSBR);
    exit_section_(b, m, ARRAY_PATTERN, r);
    return r;
  }

  // ( pattern (COMMA pattern)* (COMMA DOTDOT)? )?
  private static boolean arrayPattern_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern_1")) return false;
    arrayPattern_1_0(b, l + 1);
    return true;
  }

  // pattern (COMMA pattern)* (COMMA DOTDOT)?
  private static boolean arrayPattern_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pattern(b, l + 1);
    r = r && arrayPattern_1_0_1(b, l + 1);
    r = r && arrayPattern_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA pattern)*
  private static boolean arrayPattern_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arrayPattern_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayPattern_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA pattern
  private static boolean arrayPattern_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && pattern(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA DOTDOT)?
  private static boolean arrayPattern_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern_1_0_2")) return false;
    arrayPattern_1_0_2_0(b, l + 1);
    return true;
  }

  // COMMA DOTDOT
  private static boolean arrayPattern_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayPattern_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, DOTDOT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EQ | CEQ
  public static boolean assignTyped(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignTyped")) return false;
    if (!nextTokenIs(b, "<assign typed>", CEQ, EQ)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_TYPED, "<assign typed>");
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, CEQ);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expr (EQ | ASSIGN) expr endStmt
  public static boolean assign_st(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_st")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_ST, "<assign st>");
    r = expr(b, l + 1, -1);
    r = r && assign_st_1(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, expr(b, l + 1, -1));
    r = p && endStmt(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // EQ | ASSIGN
  private static boolean assign_st_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_st_1")) return false;
    boolean r;
    r = consumeTokenFast(b, EQ);
    if (!r) r = consumeTokenFast(b, ASSIGN);
    return r;
  }

  /* ********************************************************** */
  // AWAIT expr_st
  public static boolean await_st(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "await_st")) return false;
    if (!nextTokenIsFast(b, AWAIT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, AWAIT);
    r = r && expr_st(b, l + 1);
    exit_section_(b, m, AWAIT_ST, r);
    return r;
  }

  /* ********************************************************** */
  // VAR var_nmi
  public static boolean bindingPattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindingPattern")) return false;
    if (!nextTokenIs(b, VAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, VAR);
    r = r && var_nmi(b, l + 1);
    exit_section_(b, m, BINDING_PATTERN, r);
    return r;
  }

  /* ********************************************************** */
  // CLASS className_nmi inheritance? COLON NEW_LINE (INDENT (inheritance | topLevelDecl)* DEDENT)+
  public static boolean classDecl_tl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_tl")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_DECL_TL, "<class decl tl>");
    r = consumeTokenFast(b, CLASS);
    p = r; // pin = 1
    r = r && report_error_(b, className_nmi(b, l + 1));
    r = p && report_error_(b, classDecl_tl_2(b, l + 1)) && r;
    r = p && report_error_(b, consumeTokens(b, -1, COLON, NEW_LINE)) && r;
    r = p && classDecl_tl_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, GdParser::topLevelDecl_r);
    return r || p;
  }

  // inheritance?
  private static boolean classDecl_tl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_tl_2")) return false;
    inheritance(b, l + 1);
    return true;
  }

  // (INDENT (inheritance | topLevelDecl)* DEDENT)+
  private static boolean classDecl_tl_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_tl_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = classDecl_tl_5_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!classDecl_tl_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classDecl_tl_5", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // INDENT (inheritance | topLevelDecl)* DEDENT
  private static boolean classDecl_tl_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_tl_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, INDENT);
    r = r && classDecl_tl_5_0_1(b, l + 1);
    r = r && consumeToken(b, DEDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // (inheritance | topLevelDecl)*
  private static boolean classDecl_tl_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_tl_5_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classDecl_tl_5_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classDecl_tl_5_0_1", c)) break;
    }
    return true;
  }

  // inheritance | topLevelDecl
  private static boolean classDecl_tl_5_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_tl_5_0_1_0")) return false;
    boolean r;
    r = inheritance(b, l + 1);
    if (!r) r = topLevelDecl(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean className_nmi(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "className_nmi")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CLASS_NAME_NMI, r);
    return r;
  }

  /* ********************************************************** */
  // CLASS_NAME className_nmi endStmt?
  public static boolean classNaming(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classNaming")) return false;
    if (!nextTokenIs(b, CLASS_NAME)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_NAMING, null);
    r = consumeToken(b, CLASS_NAME);
    p = r; // pin = 1
    r = r && report_error_(b, className_nmi(b, l + 1));
    r = p && classNaming_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // endStmt?
  private static boolean classNaming_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classNaming_2")) return false;
    endStmt(b, l + 1);
    return true;
  }
